<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:actionMenu="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android">

<item android:title="@string/mode"
    actionMenu:showAsAction="ifRoom">
    <menu >
        <group >
            <item android:id="@+id/draw"
                android:title="@string/draw" />
            <item android:id="@+id/move"
                android:title="@string/move" />
            <item android:id="@+id/delete"
                android:title="@string/delete" />
        </group>
    </menu>
</item>
<item android:title="@string/color"
    actionMenu:showAsAction="ifRoom">
    <menu >
        <group >
            <item android:id="@+id/blue"
                android:title="@string/blue" />
            <item android:id="@+id/green"
                android:title="@string/green" />
            <item android:id="@+id/red"
                android:title="@string/red" />
            <item android:id="@+id/black"
                android:title="@string/black" />
        </group>
    </menu>
</item>

</menu>